# no-value

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  tests.yml
no_value/: no_value.py
src/no_value/: __init__.py
tests/: test_no_value.py
