[project]
name = "no-value"
version = "1.0.0"
description = "Sentinel value for missing data where None has its own meaning"
authors = [
    {name = "Miriada"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "coverage>=7.13.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
